--- a/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.1\n"
+"X-Generator: Poedit 1.8.2\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SearchPath-0: ../plugin\n"
@@ -266,7 +266,7 @@ msgid "Buffer path"
 msgstr "Ścieżka do buforowania"
 
 msgid "Records path"
-msgstr "Ścieżka do nagrywania"
+msgstr "Ścieżka do ściągania"
 
 msgid "Start download manager per default"
 msgstr "Domyślnie uruchomić menadżera pobierania plików"
@@ -1004,19 +1004,19 @@ msgid "The \"%s\" utility is used by the IPTVPlayer as external movie player."
 msgstr "Narzędzie \"%s\" wykorzystywane jest przez IPTVPlayer jako zewnętrzny odtwarzacz wideo."
 
 msgid "Detection of the \"%s\" utility."
-msgstr "Wykrywanie \"%s\" narzędzia."
+msgstr "Wykrywanie narzędzia \"%s\"."
 
 msgid "The \"%s\" utility is used by IPTVPlayer."
 msgstr "Narzędzie \"%s\" jest wykorzystywane przez IPTVPlayer."
 
 msgid "Downloading \"%s\"."
-msgstr "Pobieranie \"%s\"."
+msgstr "Ściąganie \"%s\"."
 
 msgid ""
 "Downloading \"%s\" failed. \n"
 "Do you want to retry?"
 msgstr ""
-"Pobieranie \"%s\" nie powiodło się. \n"
+"Ściąganie \"%s\" nie powiodło się. \n"
 "Czy chcesz spróbować ponownie?"
 
 msgid ""
