--- a/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.2\n"
+"X-Generator: Poedit 1.8.3\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SearchPath-0: ../plugin\n"
@@ -1568,3 +1568,15 @@ msgstr "Użyć Polskiej proxy dla http://prognoza.pogody.tv/"
 
 msgid "Subtitles not found."
 msgstr "Nie znaleziono napisów."
+
+msgid "Show hiddens files"
+msgstr "Pokazać ukryte pliki"
+
+msgid "Show hiddens catalogs"
+msgstr "Pokazać ukryte katalogi"
+
+msgid "Max items per page"
+msgstr "Maks.liczba elementów na jednej stronie"
+
+msgid "Buffering"
+msgstr "Buforowanie"
