Fix one word in german translation. Thanks to @itanium99

--- a/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
@@ -470,7 +470,7 @@ msgid ""
 "E2 GUI restart after IPTVPlayer update to version[%s].\n"
 "\n"
 msgstr ""
-"Enigma2 Neustart nuch Update\n"
+"Enigma2 Neustart nach Update\n"
 "Von IPTV-Player auf Version [%s]\n"
 
 msgid "Currently you have version [%s]."
